<resources>
    <string name="app_name">Delicacy</string>
    <string name="login_txt">Login</string>
    <string name="email_id_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="remember_me_chkbox">Remember Me</string>
    <string name="login_btn">Login</string>
    <string name="or">OR Sign in with Google</string>
    <string name="register_txt">New User? Click Here to Register</string>
    <string name="sign_uptxt">Sign Up</string>
    <string name="create_account_txt">Create an account to order your favorite food.</string>
    <string name="username_txt">Username</string>
    <string name="confirm_passwordtxt">Confirm Password</string>
    <string name="register_btn_txt">Register</string>
    <string name="favorite_title">Favorite</string>
    <string name="cart_title">Cart</string>
    <string name="settings_title">Settings</string>
    <string name="home_title">Home</string>
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vehicula semper ante vitae laoreet. Fusce a eros tincidunt, egestas leo eu, vulputate magna. Fusce rhoncus condimentum est eget finibus. Morbi sed imperdiet mauris. Nullam non magna vehicula, tristique justo tincidunt, gravida nisi. Suspendisse diam mauris, rutrum sed dui a, ultricies.</string>
    <string name="sample_price">Ksh 3000</string>
    <string name="total_price">Total Price</string>
    <string name="price_currency">%1$s %2$d</string>
    <string name="user_greetings">Hi %1$s,</string>
    <string name="add_order">Select order</string>
    <string name="order_rating_icon">order rating icon</string>
    <string name="black_friday_discount_txt">Black Friday Discount</string>
    <string name="promo_code_txt">Use promo code : 45JGH</string>
    <string name="btn_discount_txt">Get Your Order</string>
    <string name="image_food_description">Image of selected food</string>
    <string name="zero_value">0</string>
    <string name="food_description_txt">Description</string>
    <string name="add_to_cart_txt">Add to Cart</string>
    <string name="payment_option_txt">Select Payment Option</string>
    <string name="mpesa_txt">MPESA</string>
    <string name="checkout_txt">Checkout</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="credit_date_format">MM/YY</string>
    <string name="cvv_number">CVV</string>
    <string name="btn_pay_txt">Pay</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="logout">Logout</string>
    <string name="user_profile_photo">User profile photo</string>
    <string name="no_selections">No selections, yet.</string>
    <string name="items_in_the_cart">You don\'t have any items in the cart</string>
    <string name="favourite">favourite</string>
    <string-array name="payments_options">
        <item>MPESA</item>
        <item>VISA Card</item>
    </string-array>

</resources>